--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,19 @@
 			<artifactId>spring-security-core</artifactId>
 			<version>${spring.core.version}</version>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring.core.version}</version>
+		</dependency>		
+		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${spring.core.version}</version>
+		</dependency>		
+		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
