--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,8 @@
 		<jaxb.version>2.2.11</jaxb.version>
 		<hibernate.core.version>5.2.6.Final</hibernate.core.version>
 		<primeface.version>6.0</primeface.version>
-		<spring.core.version>4.2.2.RELEASE</spring.core.version>
+		<spring.core.version>4.2.3.RELEASE</spring.core.version>
+		<spring.security>4.1.3.RELEASE</spring.security>
 	</properties>
 
 	<build>
@@ -139,19 +140,19 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
-			<version>${spring.core.version}</version>
+			<version>${spring.security}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
-			<version>${spring.core.version}</version>
+			<version>${spring.security}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
-			<version>${spring.core.version}</version>
+			<version>${spring.security}</version>
 		</dependency>
 
 		<dependency>
